[gd_scene load_steps=6 format=3 uid="uid://c30fcql171246"]

[ext_resource type="Script" path="res://menu.gd" id="1_uahwm"]
[ext_resource type="AudioStream" uid="uid://dufer4k3r1k0e" path="res://music/Night Shade  NO COPYRIGHT 8-bit Music.mp3" id="2_pp4ku"]
[ext_resource type="Texture2D" uid="uid://cdq1007ibj6b1" path="res://Pics/Crypt-Cover.png" id="2_q58ed"]
[ext_resource type="PackedScene" uid="uid://ddvfmgqu55y0c" path="res://home.tscn" id="4_ppayp"]
[ext_resource type="PackedScene" uid="uid://cm0jwlxsrq065" path="res://map.tscn" id="5_pkr8y"]

[node name="Menu" type="Control"]
process_mode = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uahwm")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_pp4ku")
autoplay = true
bus = &"Music"

[node name="Title-Screne" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Title-Screne"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 598.0
offset_bottom = 784.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.41833, 0.234623)
texture = ExtResource("2_q58ed")

[node name="Play" type="Button" parent="Title-Screne/TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -14.7845
offset_top = 84.7011
offset_right = 96.2156
offset_bottom = 115.701
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.991948, 1)
text = "Press to start"

[node name="Main-Menu" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Menu-Options" type="VBoxContainer" parent="Main-Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 158.0
offset_top = 49.5
offset_right = 228.0
offset_bottom = 150.5
grow_horizontal = 2
grow_vertical = 2

[node name="Start" type="Button" parent="Main-Menu/Menu-Options"]
layout_mode = 2
text = "Start"

[node name="Options" type="Button" parent="Main-Menu/Menu-Options"]
layout_mode = 2
text = "Settings"

[node name="Exit" type="Button" parent="Main-Menu/Menu-Options"]
layout_mode = 2
text = "Exit"

[node name="Options" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -50.5
offset_right = 35.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="Audio" type="Button" parent="Options/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Audio"

[node name="Back-Settings" type="Button" parent="Options/VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="Audio" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Audio"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 106.0
offset_top = -38.0
offset_right = 190.0
offset_bottom = 39.0
grow_vertical = 2

[node name="Labels" type="VBoxContainer" parent="Audio/HBoxContainer"]
layout_mode = 2

[node name="Master" type="Label" parent="Audio/HBoxContainer/Labels"]
layout_mode = 2
text = "Master"

[node name="Music" type="Label" parent="Audio/HBoxContainer/Labels"]
layout_mode = 2
text = "Music"

[node name="Sound-fx" type="Label" parent="Audio/HBoxContainer/Labels"]
layout_mode = 2
text = "Sound FX"

[node name="Sliders" type="VBoxContainer" parent="Audio"]
layout_mode = 2
offset_left = 346.0
offset_top = 163.0
offset_right = 644.0
offset_bottom = 219.0
rotation = -3.14159
scale = Vector2(0.540166, 1.44248)
size_flags_horizontal = 8

[node name="Sound FX" type="HSlider" parent="Audio/Sliders"]
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="Music" type="HSlider" parent="Audio/Sliders"]
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="Master" type="HSlider" parent="Audio/Sliders"]
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="VBoxContainer2" type="VBoxContainer" parent="Audio"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -22.5
offset_top = -40.0
offset_right = 22.5
grow_horizontal = 2
grow_vertical = 0

[node name="Back-Audio" type="Button" parent="Audio/VBoxContainer2"]
layout_mode = 2
text = "Back"

[node name="Home" parent="." instance=ExtResource("4_ppayp")]
visible = false

[node name="Map" parent="." instance=ExtResource("5_pkr8y")]
visible = false
layout_mode = 1

[connection signal="pressed" from="Title-Screne/TextureRect/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Main-Menu/Menu-Options/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Main-Menu/Menu-Options/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Main-Menu/Menu-Options/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Options/VBoxContainer/Audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="Options/VBoxContainer/Back-Settings" to="." method="_on_back_settings_pressed"]
[connection signal="value_changed" from="Audio/Sliders/Sound FX" to="." method="_on_sound_fx_value_changed"]
[connection signal="value_changed" from="Audio/Sliders/Music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="Audio/Sliders/Master" to="." method="_on_master_value_changed"]
[connection signal="pressed" from="Audio/VBoxContainer2/Back-Audio" to="." method="_on_back_audio_pressed"]
